--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,1 +1,7 @@
 buildPack: python
+pipelineConfig:
+  pipelines:
+    release:
+      build:
+        steps:
+        - command: echo "hello from the other side"
